--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,27 @@
 body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: rgba(0,0,0,0.8);
+}
+
+*{
   margin: 0;
   padding: 0;
    font-family: 'Rajdhani', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
+::-webkit-scrollbar{
+  width:10px ;
+}
+::-webkit-scrollbar-track{
+  background-color: #000;
+  border-radius: 100vw;
+}
 
+::-webkit-scrollbar-thumb{
+  border-radius: 100vw;
+  background-color: #555;
+}
+::-webkit-scrollbar-thumb:hover{
+  background-color: #aaa;
+}
