--- a/src/components/Heading/heading.css
+++ b/src/components/Heading/heading.css
@@ -2,6 +2,7 @@ header{
     color: #F2EB3E;
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 }
 header h2{
     font-weight: 500;
@@ -14,4 +15,22 @@ header h2{
 }
 .social div{
     margin-left: 1rem;
+}
+.heading-sm{
+    display: none;
+    margin-left: 0;
+}
+
+@media screen and (max-width:1156px){
+    .heading-lr{
+        display: none;
+    }
+    .heading-sm{
+        display: initial;
+    }
+}
+@media screen and (max-width:850px) {
+    .social{
+        display: none;
+    }
 }
