--- a/src/components/main.css
+++ b/src/components/main.css
@@ -11,6 +11,72 @@
     justify-content: center;
     align-items: center;
 }
-.coding{
-    grid-column: 2/4;
+.coding-container{
+    grid-column: span 2/auto;
 }
+.social_group{
+    display: none;
+}
+@media screen and (max-width:1284px) {
+    .container{
+        grid-template-areas: 'a b c'
+                             'd e e'
+                             'g g i';
+        grid-template-columns: 1fr 0.7fr 1.3fr;
+    }
+    .skill-container{
+        grid-area: d;
+    }
+    .coding-container{
+        grid-area: e;
+    }
+    .experience-container{
+        grid-area: g;
+    }
+    .project-conatiner{
+        grid-area: i;
+    }
+}
+
+@media screen and (max-width:850px) {
+    .container{
+        grid-template-areas: 'a'
+                             'b'
+                             'c'
+                             'd'
+                             'e'
+                             'f'
+                             'g';
+        grid-template-columns: 1fr;
+    }
+    .profile{
+        grid-area: a;
+    }
+    .education-container{
+        grid-area: b;
+    }
+    .coding-container{
+        grid-area: c;
+    }
+    .skill-container{
+        grid-area: d;
+    }
+    .experience-container{
+        grid-area: e;
+    }
+    .project-conatiner{
+        grid-area: f;
+    }
+    .profile{
+        justify-content: space-evenly;
+        align-items: stretch;
+    }
+    .social_group{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        height: "100%";
+        /* flex-grow: 1; */
+    }
+}
+
